fix z-indexes

--- a/scopes/component/ui/compare/version-picker/component-compare-version-picker.module.scss
+++ b/scopes/component/ui/compare/version-picker/component-compare-version-picker.module.scss
@@ -12,7 +12,7 @@
   width: 100%;
 }
 .showMenuOverNav {
-  z-index: $nav-z-index + 1;
+  z-index: $topBar-zIndex;
 }
 
 .componentCompareVersionPlaceholder {
